refactor: replacing user collections name to profiles
