# src/controllers/profileController.ts
@@ -1,44 +1,46 @@
 import { Request, Response } from "express";
 import { body, validationResult } from "express-validator";
-import * as userService from "../services/userService.js";
+import * as profileService from "../services/profileService.js";
 
-export const getAllUsers = async (
+export const getAllProfiles = async (
   req: Request,
   res: Response
 ): Promise<void> => {
   try {
-    const users = await userService.getAllUsers();
-    res.json(users);
+    const profiles = await profileService.getAllProfiles();
+    res.json(profiles);
   } catch (error) {
-    console.error("Error fetching users:", error);
+    console.error("Error fetching profiles:", error);
     res.status(500).json({ message: "Internal Server Error" });
   }
 };
 
-export const getUserById = async (
+export const getProfileById = async (
   req: Request,
   res: Response
 ): Promise<void> => {
   const id = req.params.id;
   try {
-    const user = await userService.getUserById(id);
-    if (!user) {
-      res.status(404).json({ message: "User not found" });
+    const profile = await profileService.getProfileById(id);
+    if (!profile) {
+      res.status(404).json({ message: "Profile not found" });
       return;
     }
-    res.json(user);
+    res.json(profile);
   } catch (error) {
-    console.error("Error fetching user:", error);
+    console.error("Error fetching profile:", error);
     res.status(500).json({ message: "Internal Server Error" });
   }
 };
 
-export const createUser = async (
+export const createProfile = async (
   req: Request,
   res: Response
 ): Promise<void> => {
   await body("name").isString().notEmpty().run(req);
   await body("email").isEmail().notEmpty().run(req);
+  await body("password").isString().notEmpty().run(req);
+  await body("contactEmail").isEmail().notEmpty().run(req);
   await body("githubUrl").isURL().notEmpty().run(req);
   await body("linkedinUrl").isURL().notEmpty().run(req);
   await body("title").isString().notEmpty().run(req);
@@ -53,38 +55,40 @@ export const createUser = async (
   }
 
   try {
-    const newUser = await userService.createUser(req.body);
-    res.status(201).json(newUser);
+    const newProfile = await profileService.createProfile(req.body);
+    res.status(201).json(newProfile);
   } catch (error) {
-    console.error("Error creating user:", error);
+    console.error("Error creating profile:", error);
     res.status(500).json({ message: "Internal Server Error" });
   }
 };
 
-export const deleteUser = async (
+export const deleteProfile = async (
   req: Request,
   res: Response
 ): Promise<void> => {
   const id = req.params.id;
   try {
-    const user = await userService.deleteUser(id);
-    if (!user) {
-      res.status(404).json({ message: "User not found" });
+    const profile = await profileService.deleteProfile(id);
+    if (!profile) {
+      res.status(404).json({ message: "Profile not found" });
       return;
     }
     res.status(204).send();
   } catch (error) {
-    console.error("Error deleting user:", error);
+    console.error("Error deleting profile:", error);
     res.status(500).json({ message: "Internal Server Error" });
   }
 };
 
-export const updateUser = async (
+export const updateProfile = async (
   req: Request,
   res: Response
 ): Promise<void> => {
   await body("name").optional().isString().run(req);
   await body("email").optional().isEmail().run(req);
+  await body("password").optional().isString().run(req);
+  await body("contactEmail").optional().isEmail().run(req);
   await body("githubUrl").optional().isURL().run(req);
   await body("linkedinUrl").optional().isURL().run(req);
   await body("title").optional().isString().run(req);
@@ -101,27 +105,29 @@ export const updateUser = async (
   const id = req.params.id;
 
   try {
-    const existingUser = await userService.getUserById(id);
-    if (!existingUser) {
-      res.status(404).json({ message: "User not found" });
+    const existingProfile = await profileService.getProfileById(id);
+    if (!existingProfile) {
+      res.status(404).json({ message: "Profile not found" });
       return;
     }
 
     const updateData = {
-      name: req.body.name || existingUser.name,
-      email: req.body.email || existingUser.email,
-      githubUrl: req.body.githubUrl || existingUser.githubUrl,
-      linkedinUrl: req.body.linkedinUrl || existingUser.linkedinUrl,
-      title: req.body.title || existingUser.title,
-      subtitle: req.body.subtitle || existingUser.subtitle,
-      projects: req.body.projects || existingUser.projects,
-      skills: req.body.skills || existingUser.skills,
+      name: req.body.name || existingProfile.name,
+      email: req.body.email || existingProfile.email,
+      password: req.body.password || existingProfile.password,
+      contactEmail: req.body.contactEmail || existingProfile.contactEmail,
+      githubUrl: req.body.githubUrl || existingProfile.githubUrl,
+      linkedinUrl: req.body.linkedinUrl || existingProfile.linkedinUrl,
+      title: req.body.title || existingProfile.title,
+      subtitle: req.body.subtitle || existingProfile.subtitle,
+      projects: req.body.projects || existingProfile.projects,
+      skills: req.body.skills || existingProfile.skills,
     };
 
-    const updatedUser = await userService.updateUser(id, updateData);
-    res.json(updatedUser);
+    const updatedProfile = await profileService.updateProfile(id, updateData);
+    res.json(updatedProfile);
   } catch (error) {
-    console.error("Error updating user:", error);
+    console.error("Error updating profile:", error);
     res.status(500).json({ message: "Internal Server Error" });
   }
 };
